<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:salonbike="http://schemas.android.com/apk/res-auto" >

    <item
        android:id="@+id/btnShowBikeLanesMenu"
        android:orderInCategory="100"
        salonbike:showAsAction="ifRoom"
        android:title="@string/menu_options_lines"
        android:icon="@drawable/menu">
        <menu>
            <item android:id="@+id/btnShowBikeLanesLayer"
            android:title="@string/show_bikes_lanes"
            android:icon="@drawable/menu"></item>    
            <item android:id="@+id/btnShowBikeLanesNearest"
            android:title="@string/bikelane_route_nearest"
            android:icon="@drawable/route_nearest_station2"></item>
            <item android:id="@+id/btnShowBikeLanesList"
            android:title="@string/bikes_lanes_list"
            android:icon="@drawable/list_icon"></item>
        </menu>
    </item>

    <item
        android:id="@+id/btnShowBikeStationMenu"
        android:orderInCategory="100"
        salonbike:showAsAction="ifRoom"
        android:title="@string/menu_options_station"
        android:icon="@drawable/menu_bike_stations">
        <menu>
            <item android:id="@+id/btnShowBikeStationLayer"
            android:title="@string/show_bikes_stations"
            android:icon="@drawable/menu_bike_stations"></item>    
            <item android:id="@+id/btnShowBikeStationNearest"
            android:title="@string/bikestation_route_nearest"
            android:icon="@drawable/menu_bike_lines"></item>
            
        </menu>
    </item>
</menu>
