<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/station_dialog"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/title_station_Dialog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#5882FA"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/station_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
     
            android:gravity="center|left"
            
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:text="@string/menu_options_lines"
            android:textColor="#FFFFFF"
            android:textSize="28sp"
            android:textStyle="bold"
            android:background="#005882FA"
             />

        
    </LinearLayout>

    <LinearLayout
        android:id="@+id/first_children_stationDialog"
        style="@android:style/Animation.Dialog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="false"
        android:minHeight="40dp"
        android:minWidth="25dp"
        android:orientation="horizontal"
        android:paddingBottom="10dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingTop="25dp"
        android:visibility="visible" >

        <ImageView
            android:id="@+id/lock_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            
            android:contentDescription="@string/dialog_detail_station_locks"
            android:src="@drawable/locks_availables" />

        <TextView
            android:id="@+id/locks_availables"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left|center"
            android:layout_marginLeft="10dp"
            android:text="@string/dialog_detail_station_locks"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/candadosValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left|center_vertical"
            android:layout_marginLeft="5dp"
            android:gravity="center|left"
            android:text="carga_valor"
            android:textSize="16sp"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/second_children_stationDialog"
        style="@android:style/Animation.Dialog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="false"
        android:minHeight="40dp"
        android:minWidth="25dp"
        android:orientation="horizontal"
        android:paddingBottom="10dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingTop="10dp"
        android:visibility="visible" >

        <ImageView
            android:id="@+id/icon_population_bikes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:contentDescription="@string/dialog_detail_line_population"
            android:src="@drawable/bikes_availables" />

        <TextView
            android:id="@+id/available_bikes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left|center"
            android:layout_marginLeft="10dp"
            android:text="@string/dialog_detail_station_bikes"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/bikesValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|right|left"
            android:layout_marginLeft="5dp"
            android:layout_weight="1"
            android:gravity="center|left"
            android:text="carga_valor"
            android:textSize="16sp"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/third_children_stationDialog"
        style="@android:style/Animation.Dialog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="false"
        android:minHeight="40sp"
        android:minWidth="25sp"
        android:orientation="horizontal"
        android:paddingBottom="10dp"
        android:paddingLeft="10sp"
        android:paddingRight="10sp"
        android:paddingTop="10sp"
        android:visibility="visible" >

        <ImageView
            android:id="@+id/icon_length"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:adjustViewBounds="false"
            android:contentDescription="@string/dialog_detail_station_length"
            android:src="@drawable/length" />

        <TextView
            android:id="@+id/distance_to_station"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left|center_vertical"
            android:layout_marginLeft="10dp"
            android:text="@string/dialog_station_nearest"
            android:textSize="16sp" />

        <ProgressBar
            android:id="@+id/loadingDistance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp" />

        <TextView
            android:id="@+id/distanceToStation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|right|left"
            android:layout_marginLeft="5dp"
            android:layout_weight="1"
            android:gravity="center|left"
            android:text="carga_valor"
            android:textSize="16sp"
            android:textStyle="bold"
            android:visibility="gone" />

    </LinearLayout>

</LinearLayout>
