<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/laneinfodialog"
    
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center_vertical"
    android:layout_marginLeft="5dp"
    android:layout_marginRight="5dp"
    android:background="@drawable/shadow_background"
    android:baselineAligned="false"
    android:fitsSystemWindows="false"
    android:focusable="false"
    android:gravity="left"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/title_station_Dialog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#5882FA"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/station_title"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="6"
            android:gravity="center|left"
            android:height="45dp"
            android:paddingLeft="25dp"
            android:text="@string/menu_options_lines"
            android:textColor="#FFFFFF"
            android:textSize="28sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/button_ok"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:text="@string/button_ok"
            android:textColor="#FFFFFF"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/first_children_stationDialog"
        style="@android:style/Animation.Dialog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="false"
        android:minHeight="40dp"
        android:minWidth="25dp"
        android:orientation="horizontal"
        android:paddingBottom="10dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingTop="25dp"
        android:visibility="visible" >

        <ImageView
            android:id="@+id/lock_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingRight="8dp"
            android:src="@android:drawable/checkbox_on_background" />

        <TextView
            android:id="@+id/locks_availables"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left|center"
            android:layout_weight="2"
            android:text="@string/dialog_detail_line_population"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/value_of"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|right|left"
            android:layout_weight="1"
            android:gravity="center|left"
            android:text="carga_valor"
            android:textSize="16sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/second_children_stationDialog"
        style="@android:style/Animation.Dialog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="false"
        android:minHeight="40dp"
        android:minWidth="25dp"
        android:orientation="horizontal"
        android:paddingBottom="10dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingTop="10dp"
        android:visibility="visible" >

        <ImageView
            android:id="@+id/icon_population_bikes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="@string/dialog_detail_line_population"
            android:paddingRight="3dp"
            android:src="@drawable/bikes_availables_station" />

        <TextView
            android:id="@+id/available_bikes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left|center"
            android:layout_weight="2"
            android:text="@string/dialog_detail_line_population"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/TextView03"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|right|left"
            android:layout_weight="1"
            android:gravity="center|left"
            android:text="carga_valor"
            android:textSize="16sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/third_children_stationDialog"
        style="@android:style/Animation.Dialog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="false"
        android:minHeight="40sp"
        android:minWidth="25sp"
        android:orientation="horizontal"
        android:paddingBottom="10dp"
        android:paddingLeft="10sp"
        android:paddingRight="10sp"
        android:paddingTop="10sp"
        android:visibility="visible" >

        <ImageView
            android:id="@+id/icon_length"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:adjustViewBounds="false"
            android:contentDescription="@string/dialog_detail_station_length"
            android:paddingRight="8sp"
            android:src="@drawable/length" />

        <TextView
            android:id="@+id/distance_to_station"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left|center"
            android:layout_weight="2"
            android:text="@string/dialog_detail_line_lenght"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/TextView02"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|right|left"
            android:layout_weight="1"
            android:gravity="center|left"
            android:text="carga_valor"
            android:textSize="16sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/buttons_laneDialog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/button_route"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_weight="1"
            android:text="@string/dialog_route"
            android:width="100sp" />

        <Button
            android:id="@+id/button_favorite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_weight="1"
            android:enabled="false"
            android:text="@string/dialog_challenge"
            android:width="100sp" />
    </LinearLayout>

</LinearLayout>